--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </body>
 </html>
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,6 +28,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>Sign Up</title>
+    <title> Title</title>
 </head>
 <body>
     <div class="container">
